Tue Oct 14 10:03:04 1997  Scott Christley  <scottc@net-community.com>

	* README: Update installation instructions.
	* bundle.make (BUNDLE_DIR_NAME): Elminate period.
	* config.make.in (YACC, BISON, FLEX, LEX): New variables.
	* which_lib.c (search_for_library_with_type_in_directory):
	Correct testing of filename so that only legitimate combinations
	of name suffixes are recognized.

Mon Oct 13 16:06:12 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* openapp.in: New file.
	* GNUstep.sh.in: Added $GNUSTEP_SYSTEM_ROOT/Tools to the PATH.
	* Makefile.in: Install openapp in $GNUSTEP_SYSTEM_ROOT/Tools.
	* configure.in: Create openapp.
	* ld_lib_path.sh: Changed to export the library path for different
	systems.

Mon Oct 13 12:21:59 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* configure.in: Check to see if a DPS directory exists inside the X11
	headers tree.

Wed Oct  8 11:57:48 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* library.make: Define the `before-install' target to depend on `all'.
	* rules.make: `install' no longer depends on all.

Tue Oct  7 15:59:28 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* common.make: New FOUNDATION_LIBRARY_NAME, FOUNDATION_LIBRARY_DEFINE
	and RUNTIME_DEFINE make variables. Correctly handle the suffix of a
	library name (using LIBRARY_NAME_SUFFIX).
	* library.make: Append to the name of the library the suffix which
	identifies its type. Output the library in the object files directory.
	* rules.make: Move INTERNAL_LDFLAGS to the end of ALL_LDFLAGS
	definition. Removed unnecessary passing of TARGET_LIB_DIR to shell
	scripts. Process the libraries used to create a test using the
	which_lib program. New variable SCRIPTS_DIRECTORY which identifies the
	location of the dejagnu scripts (it can be not defined in which case
	the current directory is assumed).
	* target.make: For OS 4.x: don't hard code the location to libobjc and
	libgcc, pass -L flags to libtool that point to the various GNUstep